# qt_android_ncnn_lib_encrypt_example

./: readme.md
qt_android_ncnn_example/: YOLOv5.h  example.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_android_ncnn_example/ncnn20220420/include/ncnn/: platform.h
qt_android_ncnn_lib/: CMakeLists.txt  README.md  YOLOv5.cpp  yolov5s_6.2.id.h
qt_android_ncnn_lib/ncnn20220420/lib/cmake/ncnn/: ncnn.cmake
